<resources>
    <string name="app_name" translatable="false">PhotoStyle</string>

    <string name="string_photo_effects" translatable="false">Photo Effects</string>

    <string name="string_permission_request" translatable="false">Please allow all permissions in order to use the app.</string>
    <string name="string_no_image_found" translatable="false">No Image Found</string>

    <string name="string_save" translatable="false">Save</string>
    <string name="string_done" translatable="false">Done</string>

    <string name="string_brightness" translatable="false">Brightness</string>
    <string name="string_contrast" translatable="false">Contrast</string>
    <string name="string_saturation" translatable="false">Saturation</string>
    <string name="string_vignette" translatable="false" >Vignette</string>
    <string name="string_sharpen" translatable="false" >Sharpen</string>

</resources>